--- a/apps/next/wrangler.toml
+++ b/apps/next/wrangler.toml
@@ -1,4 +1,4 @@
-name = "rasta-rockk"
+name = "rasta-rock"
 compatibility_date = "2023-10-30"
 send_metrics = false
 node_compat = true
@@ -9,5 +9,5 @@ account_id = "8b065ed43bf24ab7770ea3ae7e98e0a8"
 [[ d1_databases ]]
 binding = "DB"
 database_name = "PREV_RASTAROCK"
-database_id = "885000f9-6e3a-4bac-8463-9ea3b7950b62"
+database_id = "060bf3b7-2117-483b-9621-93a4b775e1fa"
 #workers_dev = true
