--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "npm-run-all": "^4.1.5",
     "react-native-url-polyfill": "^2.0.0",
     "typescript": "^5.2.2",
-    "workerd": "1.20231218.0"
+    "workerd": "1.20231218.0",
+    "wrangler": "^3.71.0"
   }
 }
